# mathematics

./: .gitignore  pyproject.toml
mathematics/: __init__.py  arithmetic.py  curve_fit.py  fourier.py  impute.py  metric.py  normal.py  polynomial.py  pyproject.toml  type.py
mathematics/diff/: diff.py
mathematics/stata/: __init__.py  profit.py  trend.py  trend_repoter.py
tests/: test_impute.py  test_math.py  test_sequence.py  test_stata_profit.py  test_trend.py  test_trend_repoter.py  test_volumeprofile.py
