[project]
name = "mathematics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "statsmodels>=0.14.4",
]
[project.optional-dependencies]
dev = [
  "pytest",           # 开发依赖
  "pytest-cov",       # 测试覆盖率工具
]

