[build-system]
requires = [
"setuptools>=52",
"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mathematics"
version = "2024.10.3"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  
 
]
requires-python = ">=3.11"
authors = [
  {name = "Another person"}
]

license = {file = "LICENSE.txt"}


